--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
     .dashboard__page {
         margin-left: 70px;
         transition: margin 0.2s ease-in;
+        min-width: 340px;
     }
     
 }
