--- a/src/components/styles/cards/singleValueCard.module.css
+++ b/src/components/styles/cards/singleValueCard.module.css
@@ -9,7 +9,7 @@
     padding: 1rem;
     margin: 1rem 0.5rem;
     border-radius: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     background-color: #fff;
     transition: all 0.3s ease;
 }
@@ -17,13 +17,13 @@
 .title {
     font-size: 14px;
     font-weight: 500;
-    color: #333;
+    color: #4b5563;
     margin-bottom: 0.5rem;
 }
 
 .value {
     font-size: 20px;
     font-weight: 600;
-    color: #333;
+    color: #374151;
     padding-bottom: 12px;
 }
