--- a/src/components/styles/iia/accounts.module.css
+++ b/src/components/styles/iia/accounts.module.css
@@ -2,5 +2,93 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
+}
+
+
+
+.graph_balance_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height: 100%;
+}
+
+
+.account_goal_container {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    padding: 0.5rem 0rem;
+    padding-bottom: 0rem;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+    margin-bottom: 0rem;
+}
+
+
+.account_goal_title { 
+    font-size: 14px;
+    font-weight: 600;
+    color: #374151;
+    padding: 0.5rem 1rem;
+}
+
+.account_goals_list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+    list-style: none;
+
+}
+
+.account_goals{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 100%;
+    gap: 0.1rem;
+    align-items: start;
+    padding: 0.4rem 0.4rem;
+    font-size: 12px;
+    font-weight: 400;
+    color: #374151;
+
+    border-bottom: 1px solid #E5E7EB;
+    border-radius: 5px;
+
+}
+
+.account_goal_header {
+    font-size: 14px;
+    font-weight: 600;
+    color: #374151;
+
+}
+
+.account_goal_name{
+    font-size: 12px;
+    font-weight: 600;
+    color: #374151;
+    padding-left: 1rem;
+}
+
+
+
+@media screen and (min-width: 768px) {
+    .balances_container {
+        display: flex;  
+        gap: 1rem;
+        padding: 0rem 1rem;
+        width: 100% !important;
+    }
+    
+    
 }
