--- a/src/components/styles/cards/singleValueCard.module.css
+++ b/src/components/styles/cards/singleValueCard.module.css
@@ -3,27 +3,37 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: start;
-    width: 90%;
-    height: 100%;
-    min-height: 100px;
-    padding: 1rem;
-    margin: 1rem 0.5rem;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+    width: 100%;
+    height: 50%;
+    min-height: 50px;
+    padding: 0.75rem 1rem;
+    margin: 0rem 0rem;
     background-color: #fff;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+    background-color: #ffffff00;
     transition: all 0.3s ease;
 }
 
+
+@media screen and (min-width: 651px) {
+
+}
+
+@media screen and (max-width: 650px) {
+
+}
+
 .title {
-    font-size: 14px;
-    font-weight: 500;
-    color: #4b5563;
+    font-size: 11px;
+    font-weight: 600;
+    color: #6b7280;
     margin-bottom: 0.5rem;
 }
 
 .value {
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 16px;
+    font-weight: 700;
     color: #374151;
     padding-bottom: 12px;
 }
