--- a/src/components/styles/iia/accounts.module.css
+++ b/src/components/styles/iia/accounts.module.css
@@ -1,94 +1,142 @@
-.header_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 1rem;
-}
 
 
-
-.graph_balance_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width:100%;
-    height: 100%;
-}
+/* Max Width */
+@media screen and (min-width: 1000px) {
+    .page__container {  
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
 
 
-.account_goal_container {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    padding: 0.5rem 0rem;
-    padding-bottom: 0rem;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
-    margin-bottom: 0rem;
-}
+    .main__container {
+        margin: 1rem 1rem;
+    }
 
+    .header_container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0rem 0rem;
+        gap: 5px;
+        margin-bottom: 1rem;
+    }
 
-.account_goal_title { 
-    font-size: 14px;
-    font-weight: 600;
-    color: #374151;
-    padding: 0.5rem 1rem;
-}
+    .graph_balance_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width:100%;
+        height: auto;
+        padding: 2px 0rem;
+    }
 
-.account_goals_list{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    width: 100%;
-    list-style: none;
+    /* Categories Handling */
+    .categories_container {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        padding: 2px 0rem;
+        margin: 1rem 0rem;
+    }
 
-}
+    .categories__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+        padding: 2px 0rem;
+        margin-bottom: 1rem;
+        gap: 5px;
+    }
 
-.account_goals{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    width: 100%;
-    gap: 0.1rem;
-    align-items: start;
-    padding: 0.4rem 0.4rem;
-    font-size: 12px;
-    font-weight: 400;
-    color: #374151;
+    .categories__title { 
+        font-size: 20px;
+        font-weight: 600;
+        color: #6b7280;
 
-    border-bottom: 1px solid #E5E7EB;
-    border-radius: 5px;
+    }
 
-}
+    .categories_items__container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0.5rem;
+        margin: 0rem 0.5rem;
+    }
 
-.account_goal_header {
-    font-size: 14px;
-    font-weight: 600;
-    color: #374151;
+    .categories__add_button {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 10px;
+        width: 98px;
+        padding: 0.3rem 8px;
+        margin: 1rem 0.1rem;
+        border-radius: 5px;
+        background-color: #374151;
+        border: none;
+        color: #e5e7eb;
+        cursor: pointer;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+        transition: background-color 0.3s ease-in-out;
+    }
 
-}
+    .categories__add_button:hover {
+        background-color: #ef4444;
+    }
 
-.account_goal_name{
-    font-size: 12px;
-    font-weight: 600;
-    color: #374151;
-    padding-left: 1rem;
-}
-
-
-
-@media screen and (min-width: 768px) {
-    .balances_container {
-        display: flex;  
-        gap: 1rem;
-        padding: 0rem 1rem;
-        width: 100% !important;
+    .categories__add_button svg {
+        margin-left: 5px;
+        width: 16px;
+        height: 16px;
     }
     
+}
+
+
+@media screen and (min-width: 651px) and (max-width: 999px) {
+    .header_container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0rem 0rem;
+        gap: 2px;
+    }
+
+    .graph_balance_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width:100%;
+        height: 100%;
+        padding: 2px 0rem;
+    }
+}
+
+@media screen and (max-width: 650px) {
+
+    /* GRID: */
+    /* ITEM A Item B*/
+    /* ITEM C (Full span)*/
+    .header_container { 
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        overflow: hidden;
+        gap: 0px 0px;
+        padding: 0rem 0rem;
+    
+
+    }
+
+    .graph_balance_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width:100%;
+        height: 100%;
+        padding: 1rem 0rem;
+    }
     
 }
