--- a/src/components/styles/charts/sideBarChart.module.css
+++ b/src/components/styles/charts/sideBarChart.module.css
@@ -40,3 +40,14 @@
     padding: 0.5rem 0rem;
 }
 
+.is_empty_message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    color: #374151;
+    padding: 5rem 1rem;
+}
+
