--- a/src/components/styles/modals/LoginSignUp.module.css
+++ b/src/components/styles/modals/LoginSignUp.module.css
@@ -1,22 +1,236 @@
-.modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-}
-
 .modal_content {
     position: relative;
-    width: 100%;
-    max-width: 500px;
-    padding: 20px;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    height: 400px;
+    width: 500px;
+    overflow: hidden;
+    background-color: #111827;
+    border-radius: 10px;
+   
 }
+
+@media screen and (min-width: 630px){
+    .modal_content {
+        height: 450px;
+        width: 700px;
+    }
+
+    .modal_decor {
+        position: fixed;
+        background: linear-gradient(-45deg, #dc2626, #b91c1c, #111827); /* Example gradient */
+        top: 0%;
+        min-width: 50%;
+        min-height: 100%;
+        z-index: 1001;
+        transition: border-radius 0.5s;
+        overflow: hidden;
+    }
+    
+    .modal_left {
+        border-radius: 10px 0 0 10px;
+    
+    }
+    
+    .modal_right {
+        border-radius: 0 10px 10px 0;
+    
+    }
+    
+    .modal_bar {
+        width: 150%;
+        height: 8px;
+        background-color: black;
+        rotate: 30deg;
+        overflow: hidden;
+    }
+
+    /* Banner */
+    .banner__container {
+        position: absolute;
+        top: 5%;
+        left: 5%;
+        display: flex;
+        align-items: center;
+        color: #f4f4f4;
+        text-decoration: none;
+        padding: 12px 8px;
+        text-align: center;
+        justify-content: center;
+        width: 90%;
+        border-radius: 10px;
+        gap: 5px;
+    
+    }
+    
+    .banner__header {
+        visibility: visible;
+        color: #ffffff;
+        opacity: 1;
+        font-size: 24px;
+        font-weight: 700;
+        animation: LogoLoadIn 1s forwards;
+    }
+    
+    .logo__icon {
+        color: #be123c;
+        font-size: 26px;
+        margin-right: 2.5px;
+        animation: LogoLoadIn 1s forwards;
+    }
+
+    .toggle__container {
+        position: absolute;
+        top: 30%;
+        right: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: #f4f4f4;
+        text-decoration: none;
+        padding: 12px 8px;
+        text-align: center;
+        justify-content: center;
+        width: 90%;
+        border-radius: 10px;
+        gap: 5px;
+    }
+
+    .toggle__button {
+        background-color: #111827;
+        color: #f3f4f6;
+        border: none;
+        border-radius: 5px;
+        padding: 4px 12px;
+        font-size: 14px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: background-color 0.5s, width ease-in-out 0.5s;
+        min-height: 40px;
+        min-width: 40px;
+        margin-top: 8px;
+    }
+
+    .toggle__button:hover {
+        background-color: #374151;
+    }
+
+    /* Forms */
+    .login {
+        position: absolute;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+        padding: 8px 0px;
+        top: 5%;
+        left: 50%;
+        width: 50%;
+        height: 100%;
+    }
+
+    .signup {
+        position: absolute;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+        padding: 8px 0px;
+        top: 5%;
+        left: 0%;
+        width: 50%;
+        height: 100%;
+    }
+
+    .header__container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 0px;
+        width: 80%;
+    }
+    
+    .header {
+        font-size: 24px;
+        font-weight: 500;
+        color: #f3f4f6;
+    }
+    
+    .mobile_toggle{
+        display: none;
+    
+    }
+    
+    
+}
+
+@media screen and (max-width: 629px){
+    .modal_content {
+        height: 400px;
+        width: 400px;
+    }
+
+    .banner__container {
+        display: none;
+    }
+
+    .toggle__container {
+        display: none;
+    }   
+
+
+    .login {
+        position: absolute;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
+        padding-top: 0px;
+        top: 0%;
+        left: 0%;
+        height: 100%;
+        width: 100%;
+    }
+
+
+    .signup {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
+        padding-top: 0px;
+        top: 0%;
+        left: 0%;
+        height: 100%;
+        width: 100%;
+    }
+    
+}
+
+
+
+/* Modal Form Content */
+.forgot_password {
+    color: #f3f4f6;
+    font-size: 12px;
+    font-weight: 500;
+    text-decoration: none;
+    margin-top: 8px;
+    
+}  
+
+.forgot_password a {
+    color: #22d3ee;
+}
+
+.modal_form {
+    overflow: hidden;
+}
+
+.form__container {
+    display: grid;
+    grid-template-rows: 1fr 12fr;
+    width: 100%;
+    height: 60%;
+}
+
